test/errors/error18.base
The enumeration declaration is empty
enum state {
             ^ 
